version/0.16/_sources/examples/simulator/ep-simulator-fullheart_rodero.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples\simulator\ep-simulator-fullheart_rodero.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_examples_simulator_ep-simulator-fullheart_rodero.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_simulator_ep-simulator-fullheart_rodero.py:


Run a full-heart electrophysiology simulation
---------------------------------------------
This example shows how to consume a full-heart model and set it up for the
main electrophysiology simulation. It loads a pre-computed heart model
and computes the fiber orientation, Purkinje network, and conduction system. It
then simulates the electrophysiology.

.. GENERATED FROM PYTHON SOURCE LINES 34-43

.. warning::
   When using a standalone version of the DPF Server, you must accept the `license terms
   <https://dpf.docs.pyansys.com/version/stable/getting_started/licensing.html>`_. To
   accept these terms, you can set this environment variable:

   .. code-block:: python

       import os
       os.environ["ANSYS_DPF_ACCEPT_LA"] = "Y"

.. GENERATED FROM PYTHON SOURCE LINES 45-49

Perform the required imports
~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Import the required modules and set relevant paths, including that of the working
directory, heart model, and LS-DYNA executable file.

.. GENERATED FROM PYTHON SOURCE LINES 49-63

.. code-block:: Python


    import os
    from pathlib import Path

    from ansys.health.heart.examples import get_preprocessed_fullheart
    import ansys.health.heart.models as models
    from ansys.health.heart.settings.settings import FibersDRBM
    from ansys.health.heart.simulator import DynaSettings, EPSimulator

    # Set the working directory and path to the model. This example assumes that there is a

    workdir = Path.home() / "pyansys-heart" / "downloads" / "Rodero2021" / "01" / "FullHeart"
    path_to_model, path_to_partinfo, _ = get_preprocessed_fullheart(resolution="2.0mm")








.. GENERATED FROM PYTHON SOURCE LINES 64-67

Load the full-heart model
~~~~~~~~~~~~~~~~~~~~~~~~~
Load the full-heart model.

.. GENERATED FROM PYTHON SOURCE LINES 67-74

.. code-block:: Python

    model: models.FullHeart = models.HeartModel.load_model(
        path_to_model, path_to_partinfo, working_directory=workdir
    )

    # Save the model.
    model.mesh.save(os.path.join(model.workdir, "simulation_model.vtu"))








.. GENERATED FROM PYTHON SOURCE LINES 75-78

Instantiate the simulator
~~~~~~~~~~~~~~~~~~~~~~~~~
Instantiate the simulator and define settings.

.. GENERATED FROM PYTHON SOURCE LINES 80-84

.. note::
   The ``DynaSettings`` object supports several LS-DYNA versions and platforms,
   including ``smp``, ``intempi``, ``msmpi``, ``windows``, ``linux``, and ``wsl``.
   Choose the one that works for your setup.

.. GENERATED FROM PYTHON SOURCE LINES 84-100

.. code-block:: Python


    # Specify the LS-DYNA path. (The last tested working version is ``intelmpi-linux-DEV-106117``.)
    lsdyna_path = r"ls-dyna_msmpi.exe"

    # Instantiate LS-DYNA settings.
    dyna_settings = DynaSettings(
        lsdyna_path=lsdyna_path, dynatype="intelmpi", num_cpus=4, platform="windows"
    )

    # Instantiate the simulator, modifying options as necessary.
    simulator = EPSimulator(
        model=model,
        dyna_settings=dyna_settings,
        simulation_directory=os.path.join(workdir, "simulation-EP"),
    )








.. GENERATED FROM PYTHON SOURCE LINES 101-104

Load simulation settings
~~~~~~~~~~~~~~~~~~~~~~~~
Load the default settings.

.. GENERATED FROM PYTHON SOURCE LINES 104-108

.. code-block:: Python

    simulator.settings.load_defaults()

    simulator.settings.electrophysiology.analysis.solvertype = "ReactionEikonal"








.. GENERATED FROM PYTHON SOURCE LINES 109-112

Compute fiber orientation
~~~~~~~~~~~~~~~~~~~~~~~~~
Compute fiber orientation and plot the fibers on the entire model.

.. GENERATED FROM PYTHON SOURCE LINES 112-135

.. code-block:: Python


    # Import the appendage landmarks.
    from ansys.health.heart.pre.database_utils import right_atrium_appendage_landmarks

    # Get the right atrium appendage landmark of the first case of Rodero2021.
    right_atrium_appendage_coordinates = right_atrium_appendage_landmarks.get("Rodero2021").get(1)

    # Initialize the D-RBM fiber settings.
    d_rbm_settings = FibersDRBM()
    print(d_rbm_settings)

    # Compute ventricular fibers using the D-RBM method.
    simulator.compute_fibers(fiber_settings=d_rbm_settings)

    # Compute atrial fibers.
    simulator.model.right_atrium.active = True
    simulator.model.left_atrium.active = True
    simulator.model.right_atrium.fiber = True
    simulator.model.left_atrium.fiber = True
    simulator.compute_left_atrial_fiber()
    simulator.compute_right_atrial_fiber(appendage=right_atrium_appendage_coordinates)
    simulator.model.plot_fibers(n_seed_points=1000)








.. tab-set::



   .. tab-item:: Static Scene



            
     .. image-sg:: /examples/simulator/images/sphx_glr_ep-simulator-fullheart_rodero_001.png
        :alt: ep simulator fullheart rodero
        :srcset: /examples/simulator/images/sphx_glr_ep-simulator-fullheart_rodero_001.png
        :class: sphx-glr-single-img
     


   .. tab-item:: Interactive Scene



       .. offlineviewer:: C:\Users\ansys\actions-runner\_work\pyansys-heart\pyansys-heart\doc\source\examples\simulator\images\sphx_glr_ep-simulator-fullheart_rodero_001.vtksz



.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    left_ventricle=BaseFiberSettings:
      alpha_endo: 60 degree
      alpha_epi: -60 degree
      beta_endo: -20 degree
      beta_epi: 20 degree
     right_ventricle=BaseFiberSettings:
      alpha_endo: -90 degree
      alpha_epi: 25 degree
      beta_endo: 0 degree
      beta_epi: 20 degree
     alpha_outflow_tract=None beta_outflow_tract=None septal_fraction=0.6666666666666666

    <pyvista.plotting.plotter.Plotter object at 0x000001E2A0199590>



.. GENERATED FROM PYTHON SOURCE LINES 136-140

Compute the conduction system
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Compute the conduction system and Purkinje network, and then visualize the results.
The action potential propagates faster through this system compared to the rest of the model.

.. GENERATED FROM PYTHON SOURCE LINES 140-149

.. code-block:: Python


    simulator.compute_purkinje()

    # By calling this method, stimulation is at the atrioventricular node.
    # If you do not call this method, the two apex regions of the ventricles are stimulated.
    simulator.compute_conduction_system()

    simulator.model.plot_purkinje()








.. tab-set::



   .. tab-item:: Static Scene



            
     .. image-sg:: /examples/simulator/images/sphx_glr_ep-simulator-fullheart_rodero_002.png
        :alt: ep simulator fullheart rodero
        :srcset: /examples/simulator/images/sphx_glr_ep-simulator-fullheart_rodero_002.png
        :class: sphx-glr-single-img
     


   .. tab-item:: Interactive Scene



       .. offlineviewer:: C:\Users\ansys\actions-runner\_work\pyansys-heart\pyansys-heart\doc\source\examples\simulator\images\sphx_glr_ep-simulator-fullheart_rodero_002.vtksz



.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    C:\Users\ansys\actions-runner\_work\pyansys-heart\pyansys-heart\.tox\doc-html\Lib\site-packages\ansys\health\heart\writer\writer_utils.py:91: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.
      df1 = pd.concat([node_kw.nodes, df], axis=0, ignore_index=True, join="outer")
    C:\Users\ansys\actions-runner\_work\pyansys-heart\pyansys-heart\.tox\doc-html\Lib\site-packages\ansys\health\heart\pre\conduction_path.py:774: PyVistaDeprecationWarning: This filter is deprecated. Use `select_interior_points` instead.
      ids = np.where(cell_center.select_enclosed_points(sphere)["SelectedPoints"])[0]
    C:\Users\ansys\actions-runner\_work\pyansys-heart\pyansys-heart\.tox\doc-html\Lib\site-packages\ansys\health\heart\pre\conduction_path.py:774: PyVistaDeprecationWarning: This filter is deprecated. Use `select_interior_points` instead.
      ids = np.where(cell_center.select_enclosed_points(sphere)["SelectedPoints"])[0]
    C:\Users\ansys\actions-runner\_work\pyansys-heart\pyansys-heart\.tox\doc-html\Lib\site-packages\ansys\health\heart\pre\conduction_path.py:774: PyVistaDeprecationWarning: This filter is deprecated. Use `select_interior_points` instead.
      ids = np.where(cell_center.select_enclosed_points(sphere)["SelectedPoints"])[0]




.. GENERATED FROM PYTHON SOURCE LINES 150-154

Start the main simulation
~~~~~~~~~~~~~~~~~~~~~~~~~
Start the main electrophysiology simulation. This uses the previously computed fiber orientation
and Purkinje network to set up and run the LS-DYNA model.

.. GENERATED FROM PYTHON SOURCE LINES 154-157

.. code-block:: Python


    # Compute the Eikonal solution. This only computes the activation time.
    simulator.simulate(folder_name="main-ep-ReactionEikonal")




.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    C:\Users\ansys\actions-runner\_work\pyansys-heart\pyansys-heart\.tox\doc-html\Lib\site-packages\ansys\health\heart\writer\writer_utils.py:91: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.
      df1 = pd.concat([node_kw.nodes, df], axis=0, ignore_index=True, join="outer")
    C:\Users\ansys\actions-runner\_work\pyansys-heart\pyansys-heart\.tox\doc-html\Lib\site-packages\ansys\health\heart\writer\writer_utils.py:91: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.
      df1 = pd.concat([node_kw.nodes, df], axis=0, ignore_index=True, join="outer")





.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (9 minutes 26.006 seconds)


.. _sphx_glr_download_examples_simulator_ep-simulator-fullheart_rodero.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: ep-simulator-fullheart_rodero.ipynb <ep-simulator-fullheart_rodero.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: ep-simulator-fullheart_rodero.py <ep-simulator-fullheart_rodero.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: ep-simulator-fullheart_rodero.zip <ep-simulator-fullheart_rodero.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
